--- a/theme/src/client/styles/page.scss
+++ b/theme/src/client/styles/page.scss
@@ -64,7 +64,7 @@
 .page-nav {
   @include content_wrapper;
   padding: 1rem 0 0 0;
-
+  
   .inner {
     min-height: 2rem;
     margin-top: 0;
@@ -84,5 +84,8 @@
     a:after {
       content: '→';
     }
+  }
+  @media (min-width: $MQNarrow) {
+    padding: 1rem 0 0 0;
   }
 }
