--- a/theme/src/client/styles/vars-dark.scss
+++ b/theme/src/client/styles/vars-dark.scss
@@ -18,14 +18,14 @@ html.dark {
 
   // link colors
   --c-link: #D6A46F;
+  --c-link-secondary: var(--c-text-lightest);
 
   // border colors
   --c-border: #3e4c5a;
   --c-border-dark: #34404c;
 
   --c-docs-card-border: #374151;
-  --c-docs-card-shadow: 0px 1px 2px rgba(255, 255, 255, 0.05), 0px 2px 8px rgba(255, 255, 255, 0.1),
-    0px -1px 2px rgba(255, 255, 255, 0.05), 0px -2px 8px rgba(255, 255, 255, 0.1);
+  --c-docs-card-shadow: 0px 2px 4px 0px rgba(139, 92, 246, 0.2);
 
   --c-sidebar-heading: #fff;
 
@@ -52,4 +52,8 @@ html.dark {
 
     // box shadow vars
     --box-shadow-standard: 0px 2px 5px 0px rgba(78, 0, 255, 0.3), 0px 1px 2px 0px rgba(255, 255, 255, 0.2);
+    --box-shadow-large: 0px 20px 40px 0px rgba(139, 92, 246, 0.1);
 }
+
+
+
