--- a/theme/src/client/styles/vars.scss
+++ b/theme/src/client/styles/vars.scss
@@ -25,6 +25,7 @@
 
   // link colors
   --c-link: var(--c-brand);
+  --c-link-secondary: var(--c-text-lighter);
 
   // border colors
   --c-border: #eaecef;
@@ -92,6 +93,7 @@
 
   // box shadow vars
   --box-shadow-standard: 0px 4px 6px -1px rgba(0, 0, 0, 0.05), 0px 2px 4px -1px rgba(0, 0, 0, 0.05);  
+  --box-shadow-large: 0px 20px 40px -12px rgb(0 0 0 / 10%);
 }
 
 // plugin-back-to-top
